[gd_scene load_steps=11 format=3 uid="uid://beemr4p4xdgvr"]

[ext_resource type="Script" uid="uid://bk0f1dybvm88y" path="res://scripts/player.gd" id="1_p0vlq"]
[ext_resource type="Texture2D" uid="uid://bqkxyme52ttx2" path="res://SpriteSheets/One Man Band.PNG" id="2_v6fml"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3li8b"]
atlas = ExtResource("2_v6fml")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdl7e"]
atlas = ExtResource("2_v6fml")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu4a1"]
atlas = ExtResource("2_v6fml")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_70d11"]
atlas = ExtResource("2_v6fml")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw2d6"]
atlas = ExtResource("2_v6fml")
region = Rect2(640, 0, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_qu4a1"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_3li8b")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_mdl7e")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu4a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70d11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw2d6")
}],
"loop": false,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mdl7e"]
radius = 58.0

[sub_resource type="CircleShape2D" id="CircleShape2D_v6fml"]
radius = 63.0714

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 4
motion_mode = 1
platform_wall_layers = 4
script = ExtResource("1_p0vlq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qu4a1")
autoplay = "default"

[node name="HurtboxListener" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="HurtboxShape" type="CollisionShape2D" parent="HurtboxListener"]
shape = SubResource("CircleShape2D_mdl7e")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v6fml")

[node name="Slot0" type="Node2D" parent="."]
position = Vector2(-255, -47)

[node name="Slot1" type="Node2D" parent="."]
position = Vector2(-171, -173)

[node name="Slot2" type="Node2D" parent="."]
position = Vector2(93, -173)

[node name="Slot3" type="Node2D" parent="."]
position = Vector2(150, -66)

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="body_entered" from="HurtboxListener" to="." method="_on_hurtbox_body_entered"]
